# profile-isolator

./: .gitignore  CONTRIBUTING.md  LICENSE  README.en.md  README.md  RELEASE_NOTES.md  SECURITY.md  build_exe.py  cx-core.ps1  cx-gui.cmd  cx-gui.ps1  cx-profile.psm1  cx.cmd  cx.ps1  install.ps1  run-gui.cmd  share-sessions.cmd
app/: core.py  engines.py  main.py  make_icon.py  share_sessions.py  theme.py
desktop/: index.html  make_ios_icon.py  package-lock.json  package.json  vite.config.ts
desktop/src/: App.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: core.rs  lib.rs  main.rs  webview_init.js
desktop/src/lib/: api.ts
desktop/src/styles/: app.css
