[package]
name = "ai_cli_profile_isolator"
version = "1.0.0"
description = "Codex + Claude Code profile isolator"
authors = ["you"]
edition = "2021"

[[bin]]
name = "ai_cli_profile_isolator"
path = "src/main.rs"

[lib]
name = "ai_cli_profile_isolator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
walkdir = "2"
thiserror = "2"
